<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">视频加密</string>
    <string name="back">返回</string>
    <string name="action_settings">Settings</string>
    <string name="setPassword">设置密码</string>
    <string name="password">密码（3位及以上）</string>
    <string name="cannotCancel">无法中途取消</string>
    <string name="slowlyClear">取消（只需点击一次）</string>
    <string name="oldPassword">原密码（3位及以上）</string>
    <string name="newPassword">新密码（3位及以上）</string>
    <string name="makeSurePassword">确认密码</string>
    <string name="differentPassword">两次输入密码不同</string>
    <string name="wrongPassword">密码错误</string>
    <string name="login">登录</string>
    <string name="successToCancel">成功取消！</string>
    <string name="set">设置</string>
    <string name="progressing">处理中...</string>
    <string name="clear">完全清除附加信息</string>
    <string name="setDepthOfTheSearchForFile">设置文件搜索深度</string>
    <string name="exit">退出</string>
    <string name="firstTime">首次使用，请设置密码：</string>
    <string name="startUse">开始使用</string>
    <string name="file">文件</string>
    <string name="fileAndBlocks">文件\t\t\t</string>
    <string name="location">位置</string>
    <string name="iimport">导入</string>
    <string name="refresh">刷新</string>
    <string name="correctPassword">修改密码</string>
    <string name="takeplace">占位</string>
    <string name="OK">确定</string>
    <string name="cancel">取消</string>
    <string name="videoFile">视频文件</string>
    <string name="delete">删除</string>
    <string name="remove">移除</string>
    <string name="property">属性</string>
    <string name="selectAll">全选</string>
    <string name="disSelectALl">全不选</string>
    <string name="alreadyImport">已经加密</string>
    <string name="notImport">未加密</string>
    <string name="folder">文件夹</string>
    <string name="PressAgainToEncodeAndToExitTheProgram">再按一次加密并退出程序</string>
    <string name="EncodeAndExitTheProgram">加密并退出程序</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="finish">完成</string>
    <string name="principle">原理</string>
    <string name="tips">注意</string>
    <string name="play">播放</string>
    <string name="size">大小</string>
    <string name="date">日期</string>
    <string name="exitAfterRefresh">刷新后退出</string>
    <string name="success">成功</string>
    <string name="tips1_1">1.如果视频用于存档</string>
    <string name="tips1_2">\t\t\t答：如果视频用于存档，可以使用该软件加密。加密与解密会对源文件长度有修改（但不影响观看），所以要完全恢复源文件，需要如下几步：\n\t\t\t一、如果文件尚未解密，需要先导入；\n\t\t\t二、如果文件已导入，需要移除；\n\t\t\t三、然后按住视频条目不动，直到弹出对话框，选择“完全清楚附加信息”即可。\n\t\t\t注意：新版本的视频加密在解密后不会对源文件有改动。以上的“完全清楚附加信息”选项不存在。</string>
    <string name="tips2_1">2.为什么我的视频不在“未导入”列表中？</string>
    <string name="tips2_2">\t\t\t答：请尝试点击功能键，然后选择“刷新”。如果仍没有解决，请将文件移动至外层文件夹或修改最大扫描深度（扫描深度最大为4）。\n\t\t\t注意：如果文件小于5KB，将不能被导入；如果文件没有扩展名，或扩展名不通用，请将扩展名更改为MKV，一般的视频播放器支持模糊扩展名。\n</string>
    <string name="tips3_1">3.如何保证视频文件被正确加密？</string>
    <string name="tips3_2">\t\t\t答：只有在完全关闭软件后，才能对视频加密。也就是说，在软件没有退出的时候，源文件未被加密，可随意访问、解码。软件退出的方法有两种：\n\t\t\t一、在主界面，连续两次快速按下返回键；\n\t\t\t二、在主界面，点击功能键，选择“加密并退出程序”。\n</string>
    <string name="tips4_1">4.如果不小心卸载了软件并且清理了数据，如何恢复加密的视频文件？</string>
    <string name="tips4_2">\t\t\t答：由于加密结果只与密码有关，所以在两台设备上用同一密码加密同一文件的结果是相同的，是可以通用的。因此，只需将密码修改成原来的密码，然后将加密的视频导入即可。导入的一瞬间，解密完成。然后再长按“已导入”中的视频条目，在弹出的按钮中，点击“移除”，那么着个文件就被彻底解密了，没有了与密码的相关性。\n</string>
    <string name="tips5_1">5.如果忘记了密码怎么办？</string>
    <string name="tips5_2">\t\t\t答：如果忘记了密码，那么你将很难恢复。解决思路有以下两种：\n\t\t\t一、暴力尝试；\n\t\t\t二、由于密码被两次计算SHA1值，然后存入了视频文件，所以，你可以尝试SHA1破解。但是算法的复杂性导致这几乎是不可能在短时间内完成的。\n</string>
    <string name="tips6_1">6.为什么滑动列表很卡？</string>
    <string name="tips6_2">\t\t\t答：在第一次使用时，会为视频创建清晰度较高的缩略图，所以较卡。可以通过减少滑动幅度和频率的方法来缓解。\n</string>
    <string name="title_activity_set_password">SetPasswordActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>