<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_file_list_refresh"
        android:orderInCategory="0"
        android:showAsAction="never"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_file_set"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/set">
        <menu>
            <item
                android:id="@+id/menu_file_list_correctPassword"
                android:orderInCategory="0"
                android:showAsAction="never"
                android:title="@string/correctPassword"/>
            <item
                android:id="@+id/menu_file_list_searchDeep"
                android:orderInCategory="1"
                android:showAsAction="never"
                android:title="@string/setDepthOfTheSearchForFile"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_file_list_help"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/help">
        <menu>
            <item
                android:id="@+id/menu_file_list_about"
                android:orderInCategory="1"
                android:showAsAction="never"
                android:title="@string/about"/>
            <!--
                  <item
                android:id="@+id/menu_file_list_principle"
                android:orderInCategory="2"
                android:showAsAction="never"
                android:title="@string/principle"/>
            -->
            <item
                android:id="@+id/menu_file_list_tips"
                android:orderInCategory="3"
                android:showAsAction="never"
                android:title="@string/tips"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_file_list_exit"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/EncodeAndExitTheProgram"/>

</menu>