<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/temp93"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ffb90f"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correctPassword"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </RelativeLayout>

   <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/temp93"
        android:padding="10dip" >


        <EditText
            android:id="@+id/set_password_editText3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/oldPassword"
            android:inputType="textPassword"
            android:padding="10dip"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/set_password_editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_password_editText3"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:padding="10dip"
            android:scrollHorizontally="true"/>

        <TextView
            android:id="@+id/set_password_textView_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/set_password_editText1"
            android:layout_below="@id/set_password_editText1"
            android:text="@string/password"
            android:textColor="#ff0000"
            android:textSize="14sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/set_password_editText2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_password_textView_warning"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/makeSurePassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dip"
            android:scrollHorizontally="true" />

        <TextView
            android:id="@+id/set_password_textView_warning2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/set_password_editText2"
            android:layout_below="@id/set_password_editText2"
            android:text="@string/differentPassword"
            android:textColor="#ff0000"
            android:textSize="14sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/set_password_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/button_selector"
            android:text="@string/cancel"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/set_password_Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/set_password_cancel"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/OK"
            android:textColor="#ffffff" />
    </RelativeLayout>

</RelativeLayout>