<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/temp99"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ffb90f"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/temp99"
        android:padding="10dip" >

        <TextView
            android:id="@+id/textView_warning3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dip"
            android:text="@string/wrongPassword"
            android:textColor="#ff0000"
            android:textSize="15sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/main_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_warning3"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/edittext_bg_selector"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dip"
            android:scrollHorizontally="true" />

        <Button
            android:id="@+id/login_Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_editText"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/button_selector"
            android:text="@string/login"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/exit_Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_Button"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/button_selector"
            android:text="@string/cancel"
            android:textColor="#ffffff" />
    </RelativeLayout>

</RelativeLayout>