<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/file_list_frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants" >

        <!-- 底边 -->

        <TableLayout
            android:id="@+id/file_list_relative"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#ffffff"
            android:stretchColumns="*"
            android:visibility="gone" >

            <TableRow>

                <RelativeLayout
                    android:layout_width="1dip"
                    android:padding="3dip" >

                    <Button
                        android:id="@+id/file_list_button_delete"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/button_selector"
                        android:text="@string/delete"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="1dip"
                    android:padding="3dip" >

                    <Button
                        android:id="@+id/file_list_button_remove"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/button_selector"
                        android:text="@string/remove"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="1dip"
                    android:padding="3dip" >

                    <Button
                        android:id="@+id/file_list_button_selectAll"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/button_selector"
                        android:text="@string/selectAll"
                        android:textColor="#ffffff" />
                </RelativeLayout>
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:id="@+id/temp96"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#ffffff"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videoFile"
                android:textColor="#000000"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:id="@+id/temp91"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@id/temp96"
            android:background="#d0b124" />

        <ListView
            android:id="@+id/file_list_list1_ListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/file_list_relative"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/temp91"
            android:background="#ffffff"
            android:descendantFocusability="beforeDescendants" >
        </ListView>

        <ImageView
            android:id="@+id/file_list_frame1_fore"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="#80444444"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/file_list_frameLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <!-- 底边 -->

        <TableLayout
            android:id="@+id/file_list_frame2_low"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#ffffff"
            android:stretchColumns="*"
            android:visibility="gone" >

            <TableRow>

                <RelativeLayout
                    android:layout_width="1dip"
                    android:padding="3dip" >

                    <Button
                        android:id="@+id/file_list_frame2_import"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/button_selector"
                        android:text="@string/iimport"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="1dip"
                    android:padding="3dip" >

                    <Button
                        android:id="@+id/file_list_frame2_cancel"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/button_selector"
                        android:text="@string/cancel"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="1dip"
                    android:padding="3dip" >

                    <Button
                        android:id="@+id/file_list_frame2_selectAll"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/button_selector"
                        android:text="@string/selectAll"
                        android:textColor="#ffffff" />
                </RelativeLayout>
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:id="@+id/temp97"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#ffffff"
            android:padding="10dip" >

            <TextView
                android:id="@+id/file_list_frame2_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folder"
                android:textColor="#000000"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:id="@+id/temp92"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@id/temp97"
            android:background="#d0b124" />

        <ListView
            android:id="@+id/file_list_list2_listView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/file_list_frame2_low"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/temp92"
            android:background="#ffffff"
            android:descendantFocusability="beforeDescendants" >
        </ListView>

        <ImageView
            android:id="@+id/file_list_frame2_fore"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="#80444444"
            android:visibility="gone" />
    </RelativeLayout>

</FrameLayout>